Added playlist functionality
